--- a/src/main/webapp/app/home/cabinet/cabinet.component.html
+++ b/src/main/webapp/app/home/cabinet/cabinet.component.html
@@ -15,7 +15,9 @@
               <span class="u-file-icon u-icon u-icon-circle u-white u-icon-1"
                 ><img src="../../../content/images/page/482979.png" alt=""
               /></span>
-              <h5 class="u-custom-font u-font-montserrat u-text u-text-3">chargés de mission</h5>
+              <h5 class="u-custom-font u-font-montserrat u-text u-text-3">
+                <a [routerLink]="['/employe', 'DIRECTEUR', 'types']">Chargés de missions </a>
+              </h5>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
@@ -23,7 +25,9 @@
               <span class="u-file-icon u-icon u-icon-circle u-white u-icon-2"
                 ><img src="../../../content/images/page/3524761.png" alt=""
               /></span>
-              <h5 class="u-custom-font u-font-montserrat u-text u-text-4">conseiller technique</h5>
+              <h5 class="u-custom-font u-font-montserrat u-text u-text-4">
+                <a [routerLink]="['/employe', 'CONSEILLER', 'types']">Conseiller technique</a>
+              </h5>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
@@ -31,7 +35,9 @@
               <span class="u-file-icon u-icon u-icon-circle u-white u-icon-3"
                 ><img src="../../../content/images/page/839986.png" alt=""
               /></span>
-              <h5 class="u-custom-font u-font-montserrat u-text u-text-5">les attachés</h5>
+              <h5 class="u-custom-font u-font-montserrat u-text u-text-5">
+                <a [routerLink]="['/employe', 'ATTACHE', 'types']">les attachés</a>
+              </h5>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
@@ -39,7 +45,7 @@
               <span class="u-file-icon u-icon u-icon-circle u-white u-icon-4"
                 ><img src="../../../content/images/page/1283280.png" alt=""
               /></span>
-              <h5 class="u-custom-font u-font-montserrat u-text u-text-6">autres</h5>
+              <h5 class="u-custom-font u-font-montserrat u-text u-text-6"><a [routerLink]="['/employe', 'AUTRE', 'types']">Autres</a></h5>
             </div>
           </div>
         </div>
