--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -38,21 +38,9 @@
 <div [ngSwitch]="account !== null">
   <div *ngSwitchCase="true">
     <jhi-home-ministre *jhiHasAnyAuthority="'ROLE_MINISTRE'"></jhi-home-ministre>
-
-<<<<<<< HEAD
-    
-
-
-    
-    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_DIRECTEUR'"></jhi-detail-structure>
-
-   
-    
-=======
     <jhi-home-ministre *jhiHasAnyAuthority="'ROLE_SG'"></jhi-home-ministre>
->>>>>>> 05a551c178118e44a4704264e78be580d80d1b19
 
-    <jhi-detail-structure *jhiHasAnyAuthority="'ROLE_DIRECTEUR'"></jhi-detail-structure>
+    <jhi-home-directeur *jhiHasAnyAuthority="['ROLE_USER']"></jhi-home-directeur>
   </div>
 
   <div class="home-page" *ngSwitchCase="false">
