--- a/src/main/webapp/app/entities/employe/update/employe-update.component.html
+++ b/src/main/webapp/app/entities/employe/update/employe-update.component.html
@@ -1,17 +1,14 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-employe-heading" data-cy="EmployeCreateUpdateHeading" jhiTranslate="gesEmployerApp.employe.home.createOrEditLabel">
-        Create or edit a Employe
+      <h2 id="jhi-employe-heading" data-cy="EmployeCreateUpdateHeading" >
+        Créer ou éditer vos informations personnelles
       </h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
 
-        <div class="row mb-3" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
+
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="gesEmployerApp.employe.nni" for="field_nni">Nni</label>
