--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -65,7 +65,7 @@
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <h1>se connecter</h1>
 
-        <span>veuiller remplir vos données</span>
+
         <input
           type="text"
           class="form-control"
@@ -101,7 +101,7 @@
           <h1>pas de compte actuel!</h1>
           <p>créer un nouveau</p>
           <a routerLink="/account/register">
-          <button class="ghost" id="signUp">Sign Up</button>
+          <button class="ghost" id="signUp">S'inscrire</button>
         </a>
         </div>
       </div>
