--- a/src/main/webapp/app/entities/competence-linguistique/update/competence-linguistique-update.component.html
+++ b/src/main/webapp/app/entities/competence-linguistique/update/competence-linguistique-update.component.html
@@ -4,9 +4,9 @@
       <h2
         id="jhi-competence-linguistique-heading"
         data-cy="CompetenceLinguistiqueCreateUpdateHeading"
-        jhiTranslate="gesEmployerApp.competenceLinguistique.home.createOrEditLabel"
+
       >
-        Create or edit a Competence Linguistique
+        Creer ou editer une Competence Linguistique
       </h2>
 
       <div>
@@ -25,18 +25,7 @@
           </select>
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="gesEmployerApp.competenceLinguistique.employe" for="field_employe">Employe</label>
-          <select class="form-control" id="field_employe" data-cy="employe" name="employe" formControlName="employe">
-            <option [ngValue]="null"></option>
-            <option
-              [ngValue]="employeOption.id === editForm.get('employe')!.value?.id ? editForm.get('employe')!.value : employeOption"
-              *ngFor="let employeOption of employesSharedCollection; trackBy: trackEmployeById"
-            >
-              {{ employeOption.id }}
-            </option>
-          </select>
-        </div>
+
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="gesEmployerApp.competenceLinguistique.langue" for="field_langue">Langue</label>
