--- a/src/main/webapp/app/entities/experience/update/experience-update.component.html
+++ b/src/main/webapp/app/entities/experience/update/experience-update.component.html
@@ -4,18 +4,15 @@
       <h2
         id="jhi-experience-heading"
         data-cy="ExperienceCreateUpdateHeading"
-        jhiTranslate="gesEmployerApp.experience.home.createOrEditLabel"
+
       >
-        Create or edit a Experience
+        Creer ou editer une Experience
       </h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
 
-        <div class="row mb-3" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
+
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="gesEmployerApp.experience.entreprise" for="field_entreprise">Entreprise</label>
@@ -105,18 +102,7 @@
           </div>
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="gesEmployerApp.experience.employe" for="field_employe">Employe</label>
-          <select class="form-control" id="field_employe" data-cy="employe" name="employe" formControlName="employe">
-            <option [ngValue]="null"></option>
-            <option
-              [ngValue]="employeOption.id === editForm.get('employe')!.value?.id ? editForm.get('employe')!.value : employeOption"
-              *ngFor="let employeOption of employesSharedCollection; trackBy: trackEmployeById"
-            >
-              {{ employeOption.id }}
-            </option>
-          </select>
-        </div>
+
       </div>
 
       <div>
