--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -879,8 +879,8 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
 
   button {
     border-radius: 20px;
-    border: 1px solid #bae1a3;
-    background-color: #bae1a3;
+    border: 1px solid #7176b4;
+    background-color: #49638e;
     color: #ffffff;
     font-size: 12px;
     font-weight: bold;
@@ -994,13 +994,13 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
   }
 
   .overlay {
-    background: #6b87c5;
-    background: -webkit-linear-gradient(to right, #9b9ad0, #7a76c7);
-    background: linear-gradient(to right, #04040c8c, #1332888c);
+    background: #49638e;
+    background: -webkit-linear-gradient(to right, #fefeff, #fcfcfc);
+    background: linear-gradient(to right, rgb(252, 252, 252), rgb(255, 255, 255));
 
-    background: #bae1a3;
-    background: -webkit-linear-gradient(to right, #bae1a3, #9fbe8d);
-    background: linear-gradient(to right, #bae1a3, #9fbe8d);
+    background: #86a1ce;
+    background: -webkit-linear-gradient(to right, #1c3448, #1c3448);
+    background: linear-gradient(to right, #1c3448, #1c3448);
 
     background-repeat: no-repeat;
     background-size: cover;
