--- a/src/main/webapp/app/entities/competence-linguistique/update/competence-linguistique-update.component.html
+++ b/src/main/webapp/app/entities/competence-linguistique/update/competence-linguistique-update.component.html
@@ -12,10 +12,7 @@
       <div>
         <jhi-alert-error></jhi-alert-error>
 
-        <div class="row mb-3" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
+
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="gesEmployerApp.competenceLinguistique.niveau" for="field_niveau">Niveau</label>
@@ -35,7 +32,7 @@
               [ngValue]="langueOption.id === editForm.get('langue')!.value?.id ? editForm.get('langue')!.value : langueOption"
               *ngFor="let langueOption of languesSharedCollection; trackBy: trackLangueById"
             >
-              {{ langueOption.id }}
+              {{ langueOption.nom }}
             </option>
           </select>
         </div>
