--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -56,18 +56,23 @@
                 >
                   <div class="u-container-layout u-container-layout-1">
                     <h2 class="u-text u-text-1" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="">
+
+                      <span jhiTranslate="home.subtitle">
                       BIENVENUE
+                      </span>
                     </h2>
-                    <p class="u-text u-text-2">
+                    <p class="u-text u-text-2"> <span jhiTranslate="home.title">
                       Dans l'application de gestion du personnel qui vous permet de consulter les directions et les employés du Ministère de
                       la Transition Numérique de l'Innovation et de la Modernisation
+                    </span>
                     </p>
                     <a
                       (click)="login()"
                       class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-palette-1-light-1 u-radius-50 u-btn-1"
-                      >SE CONNECTER<br />
+                      >
+                      <span jhiTranslate="home.connecter"> SE CONNECTER </span><br />
                     </a>
-                    <p class="u-text u-text-3"><a routerLink="account/register">S'INSCRIRE</a></p>
+                    <p class="u-text u-text-3"><a routerLink="account/register"> <span jhiTranslate="home.inscrire"> S'INSCRIRE </span></a></p>
                   </div>
                 </div>
                 <div
