--- a/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
+++ b/src/main/webapp/app/entities/employe/detail/employe-detail.component.html
@@ -190,10 +190,10 @@
 
                 <ng-container *ngIf="!employe.photo">
                   <div *ngIf="employe.sexe == 'HOMME'">
-                    <img src="../../../../content/images/jhipster_family_member_0_head-256.png" class="profile-img" />
+                    <img src="../../../../content/images/avatar.png" class="profile-img" />
                   </div>
                   <div *ngIf="employe.sexe == 'FEMME'">
-                    <img src="../../../../content/images/jhipster_family_member_2_head-192.png" class="profile-img" />
+                    <img src="../../../../content/images/avatar.png" class="profile-img" />
                   </div>
                 </ng-container>
               </dd>
