--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -158,7 +158,7 @@
           <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="admin-menu">
             <li>
               <a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active" (click)="collapseNavbar()">
-                <fa-icon style="color: black"  icon="users" [fixedWidth]="true"></fa-icon>
+
                 <span style="color: black"  jhiTranslate="global.menu.admin.userManagement">User management</span>
               </a>
             </li>
@@ -173,7 +173,7 @@
                 (click)="collapseNavbar()"
               >
 
-                <span jhiTranslate="global.menu.entities.employe"></span>
+                <span jhiTranslate="global.menu.entities.employe">Employés</span>
               </a>
             </li>
             <li>
